# Project2

./: .coverage  .coveragerc  .env.example  .gitignore  README.md  build.sh  coverage.xml  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: ci.yml  django-ci.yml
apps/accounts/: admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_alter_profile_business_registration_number.py  0002_remove_profile_business_registration_number.py  0003_profile_business_registration_number.py
apps/accounts/tests/: __init__.py  test_accounts_admin_postgresql.py  test_admin_models_coverage.py  test_forms.py  (+4 more)
apps/businesses/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/core/: apps.py  models.py
apps/dashboard/: apps.py  models.py
apps/tax/: __init__.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
apps/tests/: test_security.py
apps/transactions/: admin.py  apps.py  forms.py  imsi_cjy_delete_fo_rms.py  models.py  urls.py  utils.py  views.py
assets/: Clipboard - 2026년 2월 13일 오후 3_13.png:Zone.Identifier  홈페이지 이해도.png:Zone.Identifier
config/: urls.py
config/settings/: base.py  dev.py  pord.py
docs/: caution_dummy_data.py  caution_dummy_data_delete.py  data_imsi.py  dummy_data.py  dummy_data_delete.py
static/css/: base.css  style.css
templates/: base.html  home.html  index.html
templates/accounts/: home.html  login.html  signup.html
templates/components/: footer.html  head.html  header.html  messages.html  navbar.html  sidebar.html
(+91 files in other folders)
