[project]
name = "project2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.base" # 본인의 settings 경로로 수정
python_files = ["tests.py", "test_*.py", "*_tests.py"]
